--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.2",
+    "cors": "^2.8.4",
     "cron": "^1.3.0",
     "express": "^4.16.3",
     "gamedig": "^1.0.41",
